---------------------------------------------------------------------------------------------------
Version: 17.0.6
Date: 2019-05-05
  Features:
  Changes:
  Bugfixes:
    - May 2019 mode - Fix possible infinite loop when trying to find places for missing biters when most have a spot.
  Info:
    - May 2019 mode - Tweak GUI wording.
---------------------------------------------------------------------------------------------------
Version: 17.0.5
Date: 2019-05-05
  Features:
  Changes:
  Bugfixes:
    - May 2019 mode - resolved issue with taking an SP game in to MP around GUI creation and destroying.
  Info:
 ---------------------------------------------------------------------------------------------------
Version: 17.0.4
Date: 2019-05-03
  Features:
  Changes:
    - May 2019 mode - made compatible and requires 0.17.35 and above.
  Bugfixes:
  Info:
    - May 2019 mode - changed mod to store targeted PlayerID rather than LuaPlayer object.
---------------------------------------------------------------------------------------------------
Version: 17.0.3
Date: 2019-05-03
  Features:
  Changes:
  Bugfixes:
    - May 2019 mode - doesn't spawn biter hunt groups after a player if they are on a surface with "spaceship" or "Orbit" in the name. This is for Space Exploration mod compatibility.
  Info:
    - Added factorio versions each mode has been tested with.
---------------------------------------------------------------------------------------------------
Version: 17.0.2
Date: 2019-04-26
  Features:
    - Added May 2019 mode
  Changes:
  Bugfixes:
  Info:
---------------------------------------------------------------------------------------------------
Version: 17.0.1
Date: 2019-04-17
  Features:
  Changes:
  Bugfixes:
    - Fixed possible mod mismatch errors in code structure by replacing conditional requires around game modes.
  Info:
---------------------------------------------------------------------------------------------------
Version: 17.0.0
Date: 2019-04-04